--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-text-mask": "^5.4.3",
+    "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.6",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4"
   }
